Initial class methods for moving snake

--- a/src/scss/components/_game-container.scss
+++ b/src/scss/components/_game-container.scss
@@ -4,6 +4,7 @@ section.game-container{
     width: $game-grid-dimesions;
     background-color: $game-grid-background;
     position: relative;
+    display: 'none';
 }
 
 div.snake-segment {
