--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 //Module imports
 @import 'modules/variables';
 //Component imports
+@import 'components/title';
 @import 'components/game-container';
 
 html {
