Added food class and tests for random food generation.

--- a/src/scss/components/_game-container.scss
+++ b/src/scss/components/_game-container.scss
@@ -14,3 +14,11 @@ div.snake-segment {
     height: $snake-segment-length;
     width: $snake-segment-length;
 }
+
+div.food {
+    border:1px solid white;
+    background-color: $food-color;
+    position: absolute;
+    height: $snake-segment-length;
+    width: $snake-segment-length;
+}
