--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -2,3 +2,4 @@ $game-grid-dimesions: 500px;
 $game-grid-background: slategrey;
 $snake-segment-length: 10px;
 $snake-color: seagreen;
+$food-color: pink;
