tidied formatting, updated fonts

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 
 //Module imports
 @import 'modules/variables';
+@import 'modules/typography';
 //Component imports
 @import 'components/title';
 @import 'components/game-container';
