Added score functionality. Updates to screen occur on upon death.

--- a/src/scss/components/_game-screen.scss
+++ b/src/scss/components/_game-screen.scss
@@ -1,4 +1,4 @@
-section.game-container{
+div.game-container{
     border:1px solid black;
     height: $game-grid-dimesions;
     width: $game-grid-dimesions;
