--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,8 +6,8 @@
 @import 'modules/typography';
 //Component imports
 @import 'components/title';
-@import 'components/game-container';
+@import 'components/game-screen';
 
 html {
-    background-color: grey;
+    background-color: lightgrey;
 }
