--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -1,5 +1,5 @@
 $game-grid-dimesions: 500px;
-$game-grid-background: slategrey;
+$game-grid-background: rgb(45, 46, 46);
 $snake-segment-length: 10px;
-$snake-color: seagreen;
-$food-color: pink;
+$snake-color: rgb(22, 226, 14);
+$food-color: rgb(216, 60, 255);
